# booking-schedule/backend/docs/bookings/swagger.json
@@ -561,7 +561,7 @@
                 }
             }
         },
-        "/{suite_id}/get-vacant-dates": {
+        "/{offer_id}/get-vacant-dates": {
             "get": {
                 "description": "Responds with list of vacant intervals within month for selected offer.",
                 "produces": [
@@ -577,8 +577,8 @@
                         "type": "integer",
                         "format": "int64",
                         "default": 1,
-                        "description": "suite_id",
-                        "name": "suite_id",
+                        "description": "offer_id",
+                        "name": "offer_id",
                         "in": "path",
                         "required": true
                     }
@@ -931,7 +931,7 @@
     },
     "tags": [
         {
-            "description": "operations with bookings, suites and intervals",
+            "description": "operations with bookings, offers and intervals",
             "name": "bookings"
         },
         {
